# rick_os_v2

./: .gitignore  Cargo.toml  grub.cfg  linker.ld  makefile
.cargo/: config.toml
src/: com.rs  idt.rs  lib.rs  memory.rs  pci.rs  tests.rs
src/acpi/: mod.rs
src/asm/: entry.asm  map_memory.asm  multiboot_header.asm
src/interrupts/: apic.rs  idt.rs  ioapic.rs  mod.rs
src/task/: keyboard.rs
