[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
# linked_list_allocator = { version = "0.10.5", default-features = false }
multiboot2 = { version = "0.19.0", default-features = false }
spin = "0.9.8"
x86_64 = "0.14.11"


