[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
multiboot2 = { version = "0.19.0", default-features = false }
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
x86 = "0.52.0"
x86_64 = "0.14.11"


